fixes z-index collision

--- a/src/sass/layout/_main-page.scss
+++ b/src/sass/layout/_main-page.scss
@@ -98,6 +98,10 @@
 
   text-align: center;
 
+    &__wrapper > * {
+      z-index: 3;
+    }
+
     &__header {
       margin-bottom: $spacer-m;
     }
